src/components/ChatApp/ChatApp.css
/* ... */
.tile{
  width: 100%;
  height: 100px;
  padding-left: 7%;
  padding-right: 2%;
}
.slick-slide{
  margin: 0 10px;
}
.slick-list{
  max-height: 100px;
}
.tile-img{
  max-width: 100%;
  max-height: 100%;
  float: left;
  text-align: center;
  position: relative;
  margin: 0 auto;
  position: absolute;
  left: 0;
  right: 0;
}

.tile-text{
  position: relative;
  padding: 2% 2% 0 2%;
  margin: 0 auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.tile-title{
  color: #999999;
  font-size: 120%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.tile-img-container{
  background-color: #f2f2f2;
  text-align: center;
  position: relative;
  width: 30%;
  height: 100%;
  padding: 0;
  margin: 0;
  float: left;
  display:flex;
  align-items:center;
  justify-content:center;
}

.tile-anchor{
  text-decoration: none;
}

a {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  display: block;
}
.dark a{
  color: #80a9a5;
}
.theme-button{
  line-height: 52px;
  background: #19324c;
  height: 56px;
  padding: 0 10px;
  color: #fff;
  font-size: 13px;
  cursor: pointer;
}
.dark .theme-button{
  line-height: 52px;
  background: #607d8b;
  height: 56px;
  padding: 0 10px;
  color:#fff;
}
.dialogStyle div{
    margin: 0 auto;
}
em{
  background-color: orange;
}
.settingsComponents{
  width: 90%;
  text-align: center;
  margin: 0 auto;
}

.settingsForm{
  margin: 0 auto;
}

@media screen and (max-width: 768px) {
  .settingsForm {
    font-size: 14px;
  }
  .settingsForm h1{
    font-size: 18px;
  }
  .settingsForm h3{
    font-size: 16px;
  }
  .settingsForm h4{
    font-size: 14px;
  }
}

